[mojo] Release() sent handles regardless of zx_channel_write() result.

Fuchsia recently changed the zx_channel_write() API to always consume
the supplied handles, by default, regardless of whether the call
succeeds in transferring them to the peer process.

Update the mojo::edk::Channel::Write() implementation to account for the
new semantics.

Bug: 854458, 754084, 740791
Change-Id: I27f78a09ff8bf2aaf94ac571678d4c2259b48b10
Reviewed-on: https://chromium-review.googlesource.com/1108970
Reviewed-by: Wez <wez@chromium.org>
Reviewed-by: Ken Rockot <rockot@chromium.org>
Commit-Queue: Wez <wez@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569053}
Former-commit-id: 676b5fae19bd233e4cce1479d631e421fec9e7b1